<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewclass.PlayerMenuActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background">

    <include layout="@layout/toolbar_logout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_scanQRCode"
            android:text="Scan QR Code"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_searchQRCode"
            android:text="Search QR Code"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_searchUsername"
            android:text="Search Username"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_ranking"
            android:text="Leaderboard"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_myProfile"
            android:text="My Profile"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_viewQRCode"
            android:text="View QR Code"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>

    </LinearLayout>


</LinearLayout>