<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewclass.ChooseGameActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <include layout="@layout/toolbar_logout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/chooseGameListView"
            android:layout_weight="9"
            android:divider="@null"
            android:layout_marginTop="5dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="Add Game"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/button_chooseGame"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>

    </LinearLayout>


</LinearLayout>