...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nEstimate my Ranking\n"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/button_myProfile_myRanking"
            android:backgroundTint="@color/blue2"/>


        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
...
