<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewclass.RankingActivity"
    android:orientation="vertical"
    android:background="@drawable/background">
    <include layout="@layout/toolbar_logout"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView_ranking"
        android:divider="@null"
        android:layout_marginTop="5dp"/>

</LinearLayout>