...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nCHECK SAME QR CODE\n"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/button_checkSameQRCode_qrCode_info"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nVIEW LOCATION\n"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nVIEW COMMENT\n"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/button_viewComment_qrCode_info"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nDELETE\n"
...
