<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_addGame"
        android:hint="Enter a name"
        android:layout_margin="10dp"
        android:inputType="textNoSuggestions"/>

</LinearLayout>