<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewclass.SearchQRCodeActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar_logout"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.osmdroid.views.MapView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/searchQRCode_mapView"
            android:visibility="gone"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/searchQRCode_progressBar"/>

    </FrameLayout>


</LinearLayout>